--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 <h1>Личная страница студента</h1>
-<h2>Майоров Павел Артемович, ИДМ-20-04</h2>
+<p>Майоров Павел Артемович, ИДМ-20-04</p>
 </body>
 </html>
