--- a/index.html
+++ b/index.html
@@ -8,5 +8,19 @@
 <body>
 <h1>Личная страница студента</h1>
 <p>Майоров Павел Артемович, ИДМ-20-04</p>
+<table>
+  <tr>
+    <td>Майоров П.А.</td>
+    <td>Дизайнер от бога + программист</td>
+  </tr>
+   <tr>
+    <td>Гепнер И.А.</td>
+    <td>Дизайнер нормальный + программист крутой</td>
+  </tr>
+  <tr>
+    <td>Казюканов Е.А.</td>
+    <td>Директор</td>
+  </tr>
+</table>
 </body>
 </html>
