--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <h1>Личная страница студента</h1>
 <p>Майоров Павел Артемович, ИДМ-20-04</p>
-<table>
+<table border="2">
   <tr>
     <td>Майоров П.А.</td>
     <td>Дизайнер от бога + программист</td>
