--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 <table border="2">
   <tr>
     <td>Майоров П.А.</td>
-    <td>Дизайнер от бога + программист</td>
+    <td>Дизайнер-маркетолог</td>
   </tr>
    <tr>
     <td>Гепнер И.А.</td>
-    <td>Дизайнер нормальный + программист крутой</td>
+    <td>Тестировщик</td>
   </tr>
   <tr>
     <td>Казюканов Е.А.</td>
-    <td>Директор</td>
+    <td>Студент</td>
   </tr>
 </table>
 </body>
