--- a/single.html
+++ b/single.html
@@ -87,8 +87,10 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 blog-content">
-            <p class="lead">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>  
+            <p class="lead">На лабораторной работе №1 было сделано:</p>
+            <p>1. Создан репозиторий и личный веб-сайт на github.</p>
+            <p>2. Сформирована команда и выбраны роли.</p>  
+	    <p>3. Составлено техническое задание, макет веб-сайта, календарный план.</p>  
          </div>
         </div>
       </div>
