--- a/single.html
+++ b/single.html
@@ -90,7 +90,7 @@
             <p class="lead">На лабораторной работе №1 было сделано:</p>
             <p>1. Создан репозиторий и личный веб-сайт на github.</p>
             <p>2. Сформирована команда и выбраны роли.</p>  
-	    <p>3. Составлено техническое задание, макет веб-сайта, календарный план.</p>  
+	    <p>3. Составлено <a href="URL">техническое задание</a>, <a href="https://github.com/MaiorovP/it/blob/master/images/maket.png">макет веб-сайта</a>, <a href="https://github.com/MaiorovP/it/blob/master/images/kal-1.jpg">календарный план</a>.</p>  
          </div>
         </div>
       </div>
