--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@
           </div>
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="h-entry">
-              <a href="single.html"><img src="images/blog_2.jpg" alt="Image" class="img-fluid"></a>
+              <a href="single2.html"><img src="images/blog_2.jpg" alt="Image" class="img-fluid"></a>
               <h2 class="font-size-regular"><a href="single2.html">Лабораторная работа 2</a></h2>
             </div> 
           </div>
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="200">
             <div class="h-entry">
-              <a href="single.html"><img src="images/blog_3.jpg" alt="Image" class="img-fluid"></a>
+              <a href="single3.html"><img src="images/blog_3.jpg" alt="Image" class="img-fluid"></a>
               <h2 class="font-size-regular"><a href="single3.html">Лабораторная работа 3</a></h2>
             </div>
           </div>
