--- a/index.html
+++ b/index.html
@@ -89,7 +89,15 @@
             <div class="text-left pb-1 border-primary mb-4">
               <h2 class="text-primary">Обо мне</h2>
             </div>
-            <p style="font-size:18px">Обучаюсь в университете МГТУ "Станкин". Состою в команде "BAN", которая на данный момент разрабатывает веб-сайт туристической компании для сбора первичной информации о клиентах, интересующихся путешествиями на круизных лайнерах.</p>
+            <p style="font-size:18px">Моя роль в команде "BAN": дизайнер-маркетолог. </p>
+	   <ol>
+            <li>разработка концепции дизайна и интерфейса web-сайта</li>
+            <li>отрисовка дизайн-макетов (технический дизайн) разделов, страниц, интерфейсов, модулей</li>
+            <li>подготовка и размещение на сайте графики и контента</li>
+            <li>заполнение, продвижение и поддержка работы сайта</li>
+          </ol>
+		
+		
 		</div>
           
         </div>
