--- a/single2.html
+++ b/single2.html
@@ -87,7 +87,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 blog-content">
-            <p class="lead">На лабораторной работе №2 было сделано:</p>
+            <p class="lead">Этапы лабораторной работы №2</p>
             <p>1. Подготовка контента для веб-сайта</p>
             <p>2. Верстка страницы по макету</p>  
 	          <p>3. Разработка серверной части веб-сайта</p>
