--- a/single.html
+++ b/single.html
@@ -87,7 +87,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 blog-content">
-            <p class="lead">На лабораторной работе №1 было сделано:</p>
+            <p class="lead">Этапы лабораторной работы №1</p>
             <p>1. Создан репозиторий и личный веб-сайт на github.</p>
             <p>2. Сформирована команда и выбраны роли.</p>  
 	    <p>3. Составлено <a href="URL">техническое задание</a>, <a href="https://github.com/MaiorovP/it/blob/master/images/maket.png">макет веб-сайта</a>, <a href="https://github.com/MaiorovP/it/blob/master/images/kal-1.jpg">календарный план</a>.</p>  
