--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center border-primary">
             <h2 class="font-weight-light text-primary" data-aos="fade">Команда "BAN"</h2>
-			<p class="color-black-opacity-5">самая крутая команда разработчиков сайтов</p>
+			<p class="color-black-opacity-5">разработчики веб-сайтов</p>
           </div>
         </div>
         <div class="row">
